Fix account menu icon spacing on mobile
[#166002998]

--- a/src/components/layout/accountMenu/AccountMenuContainer.less
+++ b/src/components/layout/accountMenu/AccountMenuContainer.less
@@ -36,14 +36,16 @@
 
 .display-mobile {
   float: right;
-  
+
   .account-menu-icon {
     height: 40px;
     width: 40px;
     margin-right: 10px;
   }
 
-  .icon-label {
-    display: none;
+  .navbar-buttons__button {
+    .icon-label {
+      display: none;
+    }
   }
 }
